[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canine"
version = "0.18.0"
description = "A modular, high-performance computing solution to run jobs using SLURM"
readme = "README.md"
license = { text = "BSD3" }
authors = [
    { name = "Aaron Graubert - Broad Institute - Cancer Genome Computational Analysis - Getz Lab", email = "aarong@broadinstitute.org" }
]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: System :: Clustering",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "paramiko>=2.5.0",
    "pandas>=2.2",
    "numpy>=2.0",
    "google-auth>=1.6.3",
    "PyYAML>=5.1",
    "agutil>=4.1.0",
    "hound @ git+https://github.com/getzlab/hound.git@wolf-2.0-update",
    "dalmatian @ git+https://github.com/getzlab/dalmatian@wolf-2.0-update",
    "google-api-python-client>=1.7.11",
    "docker>=4.1.0",
    "psutil>=5.6.7",
    "port-for>=0.4",
    "tables>=3.6.1",
    "google-crc32c>=1.5.0",
    "google-cloud-compute>=1.6.1",
]

[project.optional-dependencies]
gcp = [
    "slurm_gcp_docker @ git+https://github.com/getzlab/slurm_gcp_docker@wolf-2.0-update",
]

[project.scripts]
canine = "canine.__main__:main"
canine-transient = "canine.__main__:boot_transient"
canine-xargs = "canine.__main__:xargs"

[project.urls]
Homepage = "https://github.com/getzlab/canine"

[tool.setuptools.packages.find]
where = ["."]
include = ["canine*"]

[tool.setuptools.package-data]
"*" = [
    "backends/slurm-gcp/*",
    "backends/slurm-gcp/scripts/*",
    "backends/slurm-docker/src/*",
    "backends/dummy/*",
    "backends/dummy/conf/*",
    "localization/debug.sh",
]
